tests/ui/errors/snapshots/infer_not_comparable_mutually_recursive_enums.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Type mismatch
    ╭─[test.lis:14:16]
 13 │   let b = A.X(B.Y(A.End));
 14 │   let result = a == b;
    ·                ┬
    ·                ╰── `A` cannot be compared with `==`
 15 │ }
    ╰────
  help: The `==` and `!=` operators cannot be used on recursive types because they are not comparable in Go · code: [infer.type_mismatch]
