tests/ui/errors/snapshots/infer_not_comparable_recursive_enum_suggests_equality.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Invalid comparison
    ╭─[test.lis:10:16]
  9 │   let b = List.Nil;
 10 │   let result = a == b;
    ·                ┬
    ·                ╰── `List` cannot be compared with `==`
 11 │ }
    ╰────
  help: Mark `List` with `#[equality]` to compare it with `.equals()` · code: [infer.type_mismatch]
