tests/ui/errors/snapshots/infer_not_comparable_recursive_enum_with_equality_suggests_equals.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Invalid comparison
    ╭─[test.lis:11:16]
 10 │   let b = List.Nil;
 11 │   let result = a == b;
    ·                ┬
    ·                ╰── `List` cannot be compared with `==`
 12 │ }
    ╰────
  help: Use `.equals()` to compare `List` · code: [infer.type_mismatch]
