tests/ui/errors/snapshots/infer_not_comparable_slice.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Invalid comparison
   ╭─[test.lis:5:16]
 4 │   let b = [1, 2, 3];
 5 │   let result = a == b;
   ·                ┬
   ·                ╰── `Slice<int>` cannot be compared with `==`
 6 │ }
   ╰────
  help: Use `.equals()` to compare slices · code: [infer.type_mismatch]
