tests/ui/errors/snapshots/infer_not_comparable_slice_through_alias.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Invalid comparison
   ╭─[test.lis:5:16]
 4 │ fn test(a: Bytes, b: Bytes) {
 5 │   let result = a == b;
   ·                ┬
   ·                ╰── `Bytes` cannot be compared with `==`
 6 │ }
   ╰────
  help: Use `.equals()` to compare slices · code: [infer.type_mismatch]
