tests/ui/errors/snapshots/infer_not_comparable_struct_with_function_alias_field.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Type mismatch
    ╭─[test.lis:9:16]
  8 │ fn test(a: Holder, b: Holder) {
  9 │   let result = a == b;
    ·                ┬
    ·                ╰── `Holder` cannot be compared with `==`
 10 │ }
    ╰────
  help: The `==` and `!=` operators cannot be used on a struct containing non-comparable fields because they are not comparable in Go · code: [infer.type_mismatch]
