tests/ui/errors/snapshots/infer_not_comparable_struct_with_interface_field.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Type mismatch
    ╭─[test.lis:11:16]
 10 │ fn test(a: Holder, b: Holder) {
 11 │   let result = a == b;
    ·                ┬
    ·                ╰── `Holder` cannot be compared with `==`
 12 │ }
    ╰────
  help: The `==` and `!=` operators cannot be used on a struct containing non-comparable fields because they are not comparable in Go · code: [infer.type_mismatch]
