tests/ui/errors/snapshots/infer_not_comparable_unknown.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Type mismatch
   ╭─[test.lis:3:16]
 2 │ fn test(a: Unknown, b: Unknown) {
 3 │   let result = a == b;
   ·                ┬
   ·                ╰── `Unknown` cannot be compared with `==`
 4 │ }
   ╰────
  help: An interface value's comparability depends on its runtime type, so `==` and `!=` are not allowed here. Compare the concrete values instead · code: [infer.type_mismatch]
