tests/ui/errors/snapshots/infer_not_comparable_unknown_through_alias.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Type mismatch
   ╭─[test.lis:5:16]
 4 │ fn test(a: Any, b: Any) {
 5 │   let result = a == b;
   ·                ┬
   ·                ╰── `Any` cannot be compared with `==`
 6 │ }
   ╰────
  help: An interface value's comparability depends on its runtime type, so `==` and `!=` are not allowed here. Compare the concrete values instead · code: [infer.type_mismatch]
